--- a/app/views/HardinessZones/HardinessZones.html
+++ b/app/views/HardinessZones/HardinessZones.html
@@ -1,12 +1,16 @@
-<div layout="column" >
+<div layout="column" ng-cloak>
   <img src="./assets/imgs/HardinessZoneMap.jpg" alt="Hardiness Zones Map" />
-  <div class="" layout-padding>
-    <div layout="row" layout-align="start start">
+  <section class="" layout-padding>
+    <md-toolbar layout="row" class="md-toolbar md-primary inner-toolbar">
       <!--TODO: Fix layout issues here; use md best practices-->
-      <h1>
-        Choose Hardiness Zone <md-icon md-svg-icon="info" ng-click="$ctrl.hardinessInfo()"></md-icon>
-      </h1>
-    </div>
+      <div class="md-toolbar-tools">
+        <h2>Choose Hardiness Zone </h2>
+        <md-button class="md-icon-button" aria-label="What's a hardiness zone?">
+          <md-tooltip md-direction="right">What's a hardiness zone?</md-tooltip>
+          <md-icon md-svg-icon="info" ng-click="$ctrl.hardinessInfo()"></md-icon>
+        </md-button>
+      </div>
+    </md-toolbar>
     <fieldset class="" >
       <legend class="">Check each zone from which you would like to plant</legend>
       <div layout="row" layout-wrap flex>
@@ -24,7 +28,9 @@
           </md-checkbox>
         </div>
       </div>
+      <md-button ng-disabled="$ctrl.noneSelected()" ng-click="console.log()" ng-href="#!/pickPlants" class="md-raised md-accent">Pick Plants
+      </md-button>
     </fieldset>
     </h3>
-  </div>
+  </section>
 </div>
