--- a/app/views/PickPlants/PickPlants.html
+++ b/app/views/PickPlants/PickPlants.html
@@ -1,6 +1,6 @@
 <div layout="column" >
     <h1>Pick Your Plants!</h1>
-    <h2>{{$ctrl.selected}}</h2>
+    <h2>{{$ctrl.zones}}</h2>
 
 </div>
 <div layout="column" layout-gt-xs="row">
