--- a/app/views/PickPlants/PickPlants.html
+++ b/app/views/PickPlants/PickPlants.html
@@ -1,30 +1,32 @@
 <div layout="column" >
     <h1>Pick Your Plants!</h1>
-    <h2>{{$ctrl.zones}}</h2>
+    <h2>From Hardinesszones: {{$ctrl.zones}}</h2>
 
 </div>
-<div layout="column" layout-gt-xs="row">
-  <md-card flex="50" flex-gt-sm="33" ng-repeat="plant in $ctrl.plants">
-    <md-card-title>
-      <md-card-title-text>
-        <span class="md-headline">{{plant.name | uppercase}}</span>
-      </md-card-title-text>
-      <md-card-title-media class="md-padding">
-        <div class="md-media-lg card-media">
-          <img ng-src="./assets/svg/plants/{{plant.name}}.svg" alt="{{plant.name}} Image" />
-          <!-- TODO: md-icon is ready to go below, just need to resolve sizing issue-->
-          <!--  <md-icon md-svg-icon="shovel"></md-icon> -->
-        </div>
-      </md-card-title-media>
-    </md-card-title>
+<div layout-xs="column" layout="row" layout-wrap>
+  <div class="flex flex-sm-50 flex-gt-sm-33" ng-repeat="plant in $ctrl.plants | filter: $ctrl.zoneFilter">
+  <md-card>
+    <md-card-header>
+      <md-card-avatar>
+        <img ng-src="./assets/svg/plants/{{plant.name}}.svg" alt="{{plant.name}} Image" />
+      </md-card-avatar>
+      <md-card-header-text>
+        <span class="md-title">{{plant.name | uppercase}}</span>
+        <span class="md-subhead">Variety</span>
+      </md-card-header-text>
+    </md-card-header>
     <md-card-content layout-align="start start">
+      <!--TODO: make this pretty-->
       <p>
-        {{plant.content}}
+        Sun: {{plant.sun}}<br>
+        Soil: {{plant.soil}}<br>
+        Daycount: {{plant.daycount}}<br>
       </p>
       <md-card-actions layout="row" layout-align="end center">
-        <md-button ng-href="{{location.url}}" ng-disabled="{{location.disabled}}" class="md-raised md-accent">Add {{plant.name}}
+        <md-button ng-click="$ctrl.thisChecker()" class="md-raised md-accent">Add {{plant.name}}
         </md-button>
       </md-card-actions>
     </md-card-content>
   </md-card>
+</div>
 </div>
