Components exchanging values!

--- a/app/views/PickPlants/PickPlants.html
+++ b/app/views/PickPlants/PickPlants.html
@@ -1,7 +1,7 @@
 <div layout="column" >
     <h1>Pick Your Plants!</h1>
     <h2>From Hardinesszones: {{$ctrl.zones}}</h2>
-
+    <h3>UserList: {{$ctrl.plantsSelected}}</h3>
 </div>
 <div layout-xs="column" layout="row" layout-wrap>
   <div class="flex flex-sm-50 flex-gt-sm-33" ng-repeat="plant in $ctrl.plants | filter: $ctrl.zoneFilter">
@@ -23,7 +23,7 @@
         Daycount: {{plant.daycount}}<br>
       </p>
       <md-card-actions layout="row" layout-align="end center">
-        <md-button ng-click="$ctrl.thisChecker()" class="md-raised md-accent">Add {{plant.name}}
+        <md-button ng-click="$ctrl.plantToUser(plant, $ctrl.plantsSelected)" class="md-raised md-accent">Add {{plant.name}}
         </md-button>
       </md-card-actions>
     </md-card-content>
