Ready for bottom Sheet!

--- a/app/views/HardinessZones/HardinessZones.html
+++ b/app/views/HardinessZones/HardinessZones.html
@@ -13,7 +13,7 @@
     </md-toolbar>
     <fieldset class="" >
       <legend class="">Check each zone from which you would like to plant</legend>
-      <div layout="row" layout-wrap flex>
+      <div layout="row" flex layout-wrap>
         <div flex-xs flex="100">
           <md-checkbox aria-label="Select All"
                        ng-checked="$ctrl.isChecked($ctrl.selected)"
