--- a/app/views/PickPlants/PickPlants.html
+++ b/app/views/PickPlants/PickPlants.html
@@ -1,32 +1,39 @@
 <div layout="column" >
     <h1>Pick Your Plants!</h1>
-    <h2>From Hardinesszones: {{$ctrl.zones}}</h2>
-    <h3>UserList: {{$ctrl.plantsSelected}}</h3>
+    <fieldset>
+      <legend class="">Dev View</legend>
+      <h2>From Hardinesszones: {{$ctrl.zones}}</h2>
+      <h3>UserList: <span ng-repeat="userplant in $ctrl.plantsSelected track by $index">{{userplant.name}}, </span> </h3>
+    </fieldset>
+
+
+
+
 </div>
 <div layout-xs="column" layout="row" layout-wrap>
   <div class="flex flex-sm-50 flex-gt-sm-33" ng-repeat="plant in $ctrl.plants | filter: $ctrl.zoneFilter">
-  <md-card>
-    <md-card-header>
-      <md-card-avatar>
-        <img ng-src="./assets/svg/plants/{{plant.name}}.svg" alt="{{plant.name}} Image" />
-      </md-card-avatar>
-      <md-card-header-text>
-        <span class="md-title">{{plant.name | uppercase}}</span>
-        <span class="md-subhead">Variety</span>
-      </md-card-header-text>
-    </md-card-header>
-    <md-card-content layout-align="start start">
-      <!--TODO: make this pretty-->
-      <p>
-        Sun: {{plant.sun}}<br>
-        Soil: {{plant.soil}}<br>
-        Daycount: {{plant.daycount}}<br>
-      </p>
-      <md-card-actions layout="row" layout-align="end center">
-        <md-button ng-click="$ctrl.plantToUser(plant, $ctrl.plantsSelected)" class="md-raised md-accent">Add {{plant.name}}
-        </md-button>
-      </md-card-actions>
-    </md-card-content>
-  </md-card>
-</div>
+    <md-card>
+      <md-card-header>
+        <md-card-avatar>
+          <img ng-src="./assets/svg/plants/{{plant.name}}.svg" alt="{{plant.name}} Image" />
+        </md-card-avatar>
+        <md-card-header-text>
+          <span class="md-title">{{plant.name | uppercase}}</span>
+          <span class="md-subhead">Variety</span>
+        </md-card-header-text>
+      </md-card-header>
+      <md-card-content layout-align="start start">
+        <!--TODO: make this pretty-->
+        <p>
+          Sun: {{plant.sun}}<br>
+          Soil: {{plant.soil}}<br>
+          Daycount: {{plant.daycount}}<br>
+        </p>
+        <md-card-actions layout="row" layout-align="end center">
+          <md-button ng-click="$ctrl.plantToUser(plant, $ctrl.plantsSelected)" class="md-raised md-accent">Add {{plant.name}}
+          </md-button>
+        </md-card-actions>
+      </md-card-content>
+    </md-card>
+  </div>
 </div>
