--- a/app/views/HardinessZones/HardinessZones.html
+++ b/app/views/HardinessZones/HardinessZones.html
@@ -28,10 +28,9 @@
           </md-checkbox>
         </div>
       </div>
-      <md-button ng-disabled="$ctrl.noneSelected($ctrl.selected)" ng-click="console.log()" ng-href="#!/pickPlants" class="md-raised md-accent">Pick Plants
+      <md-button ng-disabled="$ctrl.noneSelected($ctrl.selected)" ng-click="showUserList=true" ng-href="#!/pickPlants" class="md-raised md-accent">Pick Plants
       </md-button>
     </fieldset>
     </h3>
   </section>
--->
 </div>
