--- a/app/views/Home/Home.html
+++ b/app/views/Home/Home.html
@@ -34,7 +34,7 @@
             {{location.content}}
           </p>
           <md-card-actions layout="row" layout-align="end center">
-            <md-button ng-href="{{location.url}}" ng-disabled="{{location.disabled}}" class="md-raised md-accent">Let's Go!
+            <md-button ng-href="{{location.url}}" ng-click="" ng-disabled="{{location.disabled}}" class="md-raised md-accent">Let's Go!
             </md-button>
           </md-card-actions>
         </md-card-content>
